Resolve Settings for EA imports + Fix some alignments

--- a/src/resources/postcss/aggregator-page.pcss
+++ b/src/resources/postcss/aggregator-page.pcss
@@ -276,6 +276,10 @@
 		color: gray;
 	}
 
+	.tribe-ea-inline-label {
+		line-height: 30px;
+	}
+
 	.tribe-notice-tribe-missing-aggregator-license {
 		background: url(../images/aggregator/ea-upsell-bkg.svg) transparent no-repeat;
 		background-size: cover;
